--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -55,6 +55,14 @@
 
 }
 
+@mixin contenedor-md {
+    //max-width: 128rem;
+    //width: 95%;
+    width: min(95%,80rem);
+    margin: 0 auto;
+
+}
+
 @mixin contenedor-sm {
     //max-width: 128rem;
     //width: 95%;
@@ -152,4 +160,8 @@
         color:v.$azul;
         cursor: pointer;
     }
+}
+
+@mixin shadow{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
