--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -81,9 +81,15 @@
     //heredamos estilos
     @include headings;
     margin: 6rem 0 3rem 0;
-    text-align: center;
-    
-    
+    text-align: center;  
+}
+
+@mixin descripcion-pagina{
+    color: v.$gris-oscuro;
+    margin-bottom: 5rem;
+    text-align: center; 
+    font-size: 1.8rem;
+    font-weight: v.$delgada;
 }
 
 @mixin texto-fluido($min, $max)
@@ -164,4 +170,15 @@
 
 @mixin shadow{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+@mixin card{
+    border: 1px solid lighten(v.$gris, 10);
+    padding: 3rem;
+
+    &__nombre{
+        font-weight: v.$black;
+        font-size: 2.6rem;
+        margin: 2rem 0;
+    }
 }
